<resources>
    <string name="app_name">MPAS</string>
    <string name="title"> MPAS PAY </string>
    <string name="bt_cpm">QR Make(CPM)</string>
    <string name="bt_mpm">QR Read(MPM)</string>
    <string name="merchant">가맹점</string>
    <string name="menu">메뉴</string>
    <string name="price">금액</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="authNum">승인번호</string>
    <string name="authUniq">고유번호</string>
    <string name="tvReady">결제를 진행 하실래요?</string>
    <string name="authResultOK">결제가 완료 되었습니다</string>
    <string name="cancel">취소</string>
    <string name="authConfirm">결제</string>
    <string name="alreadyAuth">이미 승인된 거래 입니다</string>
    <string name="back">뒤로</string>
    <string name="merchantName">NICE Shop</string>
    <string name="authDate">승인 일시</string>


    <string name="title_activity_manage_ment">ManageMentActivity</string>
    <string name="business_id">Business num</string>
    <string name="business_id_default_value">1078155843</string>
    <string name="tid">TID</string>
    <string name="tid_default_value">1802100001</string>
    <string name="ficode">FICode</string>
    <string name="ficode_value">0100</string>
    <string name="bt_merchantinfo">정보조회</string>
    <string name="bt_merchant_ficode_query">가맹번호</string>
    <string name="bt_merchant_sales">매출</string>
    <string name="bt_merchant_sales_purchase">매입사별</string>
    <string name="bt_merchant_sales_purchase_detail">매입상세</string>
    <!-- Preference Titles -->
    <string name="Merchant">가맹점</string>
    <string name="Devices">기기설정</string>
    <string name="Payment">결제</string>
    <string name="My">MY</string>
    <string name="Notification">알림</string>
    <string name="Version">버전정보</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_merchant">MerchantActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="merchant_fragment_label">Merchant Fragment</string>
    <string name="summary_fragment_label">Summary Fragment</string>
    <string name="sales_fragment_label">Sales Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sales_spinner_prompt">가맹점을 선택해 주세요</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sales">SalesActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nice shop</string>
    <string name="nav_header_subtitle">nicepay@nicepay.co.kr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sales">결제 모드</string>
    <string name="menu_settings">설정</string>
    <string name="menu_manager">관리 모드</string>
    <string name="menu_barcode_reader">Push Scanner</string>
    <string name="menu_pos">POS</string>
    <string name="menu_kiosk">KIOSK</string>
    <string name="title_activity_management">ManagementActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="title_activity_draw">DrawActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>