<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".merchant.ManageActivity">

        <LinearLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/business_id"
                android:inputType="number"
                android:text="@string/business_id_default_value" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_tid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tid"
                android:inputType="number"
                android:text="@string/tid_default_value" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputFicode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ficode"
                android:inputType="number"
                android:text="@string/ficode_value" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btMerchantInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bt_merchantinfo" />

        <Button
            android:id="@+id/btInfoQueryIssuer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bt_merchant_ficode_query" />

        <Button
            android:id="@+id/btIQueryISales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bt_merchant_sales" />

        <Button
            android:id="@+id/btIQueryIPurchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bt_merchant_sales_purchase" />

        <Button
            android:id="@+id/btIQueryIPurchaseDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bt_merchant_sales_purchase_detail" />
    </LinearLayout>

        <FrameLayout
            android:id="@+id/recyclerViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btLinearLayout"
            app:layout_constraintBottom_toBottomOf="parent">

        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>